--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -14,16 +14,21 @@
 
             <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
                 <li class="nav-item dropdown">
-                    <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="assets/img/profile.jpg" alt="user-img" width="36" class="img-circle"><span >Hizrian</span></span> </a>
+                    <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> 
+                        <img src="" alt="user-img" width="36" class="img-circle" id="img-profil">
+                        <span id="nom-2"></span></span> </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
                             <div class="user-box">
-                                <div class="u-img"><img src="assets/img/profile.jpg" alt="user"></div>
+                                <div class="u-img"><img src="" alt="user" id="img-profil-2"></div>
                                 <div class="u-text">
-                                    <h4>Hizrian</h4>
-                                    <p class="text-muted">hello@themekita.com</p><a href="/profil" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+                                    <h4 id="nom"></h4>
+                                    <p class="text-muted" id="email"></p>
+                                    <a href="/profil" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
                                 </div>
                             </li>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#"><i class="fa fa-power-off"></i>Logout</a>
                           </ul>
                     </li>
                 </ul>
