--- a/src/views/components/scripts.ejs
+++ b/src/views/components/scripts.ejs
@@ -9,4 +9,5 @@
 <script src="assets/js/plugin/chart-circle/circles.min.js"></script>
 <script src="assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 <script src="assets/js/ready.min.js"></script>
-<script src="assets/js/demo.js"></script>
+<script src="assets/js/demo.js"></script> 
+<script src="assets/js/scripts/header.js"></script> 
