--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <title>Document</title>
+  <%- include('components/head', {title: "Login"}) %>
 </head>
 <body>
     <!-- Login 8 - Bootstrap Brain Component -->
@@ -34,7 +31,7 @@
                         <p class="text-center mt-4 mb-5">Veillez entrer vos données</p>
                       </div>
                     </div>
-                    <form action="/sign-in" method="post">
+                    <form id="form-login">
                       <div class="row gy-3 overflow-hidden">
                         <div class="col-12">
                           <div class="form-floating mb-3">
@@ -52,25 +49,24 @@
                           <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" name="remember_me" id="remember_me">
                             <label class="form-check-label text-secondary mb-2" for="remember_me">
-                              Keep me logged in
+                              Se souvenir de moi
                             </label>
                           </div>
                         </div>
                         <div class="col-12">
                           <div class="d-grid">
-                            <button class="btn btn-dark btn-lg" type="submit">Log in now</button>
+                            <button class="btn btn-dark" type="submit">Se connecter</button>
                           </div>
                         </div>
                       </div>
                     </form>
-                 <!--    <div class="row">
+                    <div class="row d-none" id="erreur">
                       <div class="col-12">
                         <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-center mt-5">
-                          <a href="#!" class="link-secondary text-decoration-none">Create new account</a>
-                          <a href="#!" class="link-secondary text-decoration-none">Forgot password</a>
+                          <p class="text-warning">Email ou mot de passe incorrect</p>
                         </div>
                       </div>
-                    </div> -->
+                    </div>
                   </div>
                 </div>
               </div>
@@ -81,4 +77,5 @@
     </div>
   </section>
 </body>
+<script src="assets/js/scripts/login.js"></script>
 </html>
